--- a/static/index.html
+++ b/static/index.html
@@ -9,8 +9,15 @@
     <link rel="stylesheet" href="/static/style.css">
 </head>
 <body>
-    <header class="bg-primary text-white text-center p-3">
-        <h1><i class="bi bi-wallet2"></i> StashUp 日常記帳</h1>
+    <header class="bg-primary text-white p-3">
+        <div class="container d-flex justify-content-between align-items-center">
+            <h1><i class="bi bi-wallet2"></i> StashUp 日常記帳</h1>
+            <div id="auth-section">
+                <span id="username-display" class="me-2"></span>
+                <button class="btn btn-light" id="logout-btn" style="display: none;">登出</button>
+                <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#auth-modal" id="login-register-btn">登入 / 註冊</button>
+            </div>
+        </div>
     </header>
 
     <main class="container mt-4">
@@ -200,6 +207,56 @@
                     <div id="category-list-income" class="mt-3">
                         <p><strong>收入</strong></p>
                         <ul class="list-group" id="income-category-list"></ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Auth Modal (Login/Register) -->
+    <div class="modal fade" id="auth-modal" tabindex="-1" aria-labelledby="auth-modal-label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="auth-modal-label">登入 / 註冊</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <ul class="nav nav-tabs mb-3" id="authTab" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link active" id="login-tab" data-bs-toggle="tab" data-bs-target="#login-pane" type="button" role="tab" aria-controls="login-pane" aria-selected="true">登入</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link" id="register-tab" data-bs-toggle="tab" data-bs-target="#register-pane" type="button" role="tab" aria-controls="register-pane" aria-selected="false">註冊</button>
+                        </li>
+                    </ul>
+                    <div class="tab-content" id="authTabContent">
+                        <div class="tab-pane fade show active" id="login-pane" role="tabpanel" aria-labelledby="login-tab">
+                            <form id="login-form">
+                                <div class="mb-3">
+                                    <label for="login-username" class="form-label">使用者名稱</label>
+                                    <input type="text" id="login-username" class="form-control" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="login-password" class="form-label">密碼</label>
+                                    <input type="password" id="login-password" class="form-control" required>
+                                </div>
+                                <button type="submit" class="btn btn-primary w-100">登入</button>
+                            </form>
+                        </div>
+                        <div class="tab-pane fade" id="register-pane" role="tabpanel" aria-labelledby="register-tab">
+                            <form id="register-form">
+                                <div class="mb-3">
+                                    <label for="register-username" class="form-label">使用者名稱</label>
+                                    <input type="text" id="register-username" class="form-control" required>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="register-password" class="form-label">密碼</label>
+                                    <input type="password" id="register-password" class="form-control" required>
+                                </div>
+                                <button type="submit" class="btn btn-success w-100">註冊</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
             </div>
