--- a/static/index.html
+++ b/static/index.html
@@ -269,6 +269,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <script src="/static/script.js"></script>
+    <script type="module" src="/static/js/main.js"></script>
 </body>
 </html>
