--- a/static/index.html
+++ b/static/index.html
@@ -100,6 +100,22 @@
             </div>
         </section>
 
+        <!-- User Management -->
+        <section id="user-management" class="mb-4">
+            <div class="card">
+                <div class="card-header">
+                    <h5 class="mb-0"><i class="bi bi-person-gear"></i> 帳號管理</h5>
+                </div>
+                <div class="card-body">
+                    <div class="d-flex flex-wrap gap-2">
+                        <button class="btn btn-outline-primary" id="export-data-btn"><i class="bi bi-download"></i> 匯出資料</button>
+                        <button class="btn btn-outline-success" id="import-data-btn"><i class="bi bi-upload"></i> 匯入資料</button>
+                        <button class="btn btn-outline-danger" id="delete-account-btn"><i class="bi bi-trash"></i> 刪除帳號</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Chart Display -->
         <section id="chart-display" class="mb-4">
             <div class="card">
@@ -258,6 +274,58 @@
                             </form>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Delete Account Confirmation Modal -->
+    <div class="modal fade" id="delete-account-modal" tabindex="-1" aria-labelledby="delete-account-modal-label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title text-danger" id="delete-account-modal-label"><i class="bi bi-exclamation-triangle"></i> 確認刪除帳號</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p class="text-danger fw-bold">警告：此操作無法復原！</p>
+                    <p>刪除帳號將會：</p>
+                    <ul>
+                        <li>永久刪除您的所有交易紀錄</li>
+                        <li>永久刪除您的所有自訂分類</li>
+                        <li>永久刪除您的帳號資訊</li>
+                    </ul>
+                    <p>請輸入您的使用者名稱以確認刪除：</p>
+                    <input type="text" id="confirm-username" class="form-control" placeholder="輸入使用者名稱">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-danger" id="confirm-delete-btn" disabled>確認刪除</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Import Data Modal -->
+    <div class="modal fade" id="import-data-modal" tabindex="-1" aria-labelledby="import-data-modal-label" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="import-data-modal-label"><i class="bi bi-upload"></i> 匯入資料</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="import-file" class="form-label">選擇 JSON 檔案</label>
+                        <input type="file" id="import-file" class="form-control" accept=".json">
+                    </div>
+                    <div class="alert alert-info">
+                        <i class="bi bi-info-circle"></i> 匯入的資料將會新增到現有資料中，不會覆蓋原有資料。
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">取消</button>
+                    <button type="button" class="btn btn-success" id="confirm-import-btn" disabled>匯入資料</button>
                 </div>
             </div>
         </div>
