feat: Update button text for '顯示分析' to '圖表' and '帳號管理' to '帳號' in static/index.html

--- a/static/index.html
+++ b/static/index.html
@@ -94,10 +94,10 @@
         <!-- Action Buttons -->
         <section id="action-buttons" class="mb-4">
             <div class="d-flex justify-content-around gap-2">
-                <button class="btn btn-primary btn-lg flex-grow-1" data-bs-toggle="modal" data-bs-target="#transaction-modal"><i class="bi bi-plus-circle"></i> 新增交易</button>
-                <button class="btn btn-outline-secondary btn-lg flex-grow-1" data-bs-toggle="modal" data-bs-target="#category-modal"><i class="bi bi-tags"></i> 管理分類</button>
-                <button class="btn btn-info btn-lg flex-grow-1" id="toggle-chart-btn"><i class="bi bi-pie-chart"></i> 顯示分析</button>
-                <button class="btn btn-warning btn-lg flex-grow-1" id="toggle-user-management-btn"><i class="bi bi-person-gear"></i> 帳號管理</button>
+                <button class="btn btn-primary btn-lg flex-grow-1" data-bs-toggle="modal" data-bs-target="#transaction-modal"><i class="bi bi-plus-circle"></i> 新增</button>
+                <button class="btn btn-outline-secondary btn-lg flex-grow-1" data-bs-toggle="modal" data-bs-target="#category-modal"><i class="bi bi-tags"></i> 分類</button>
+                <button class="btn btn-info btn-lg flex-grow-1" id="toggle-chart-btn"><i class="bi bi-pie-chart"></i> 圖表</button>
+                <button class="btn btn-warning btn-lg flex-grow-1" id="toggle-user-management-btn"><i class="bi bi-person-gear"></i> 帳號</button>
             </div>
         </section>
 
